@@ -140,17 +140,6 @@ proc gdb_load { arg } {
     global timeout
     global last_gdb_file;
 
-    if [target_info exists gdb_download_size] {
-	send_gdb "set download-write-size [target_info gdb_download_size]\n";
-	gdb_expect 30 {
-	    -re "$gdb_prompt $" { }
-	    default {
-		perror "Setting download-write-size for target failed";
-		return -1;
-	    }
-	}
-    }
-
     if { $arg == "" } {
 	if [info exists last_gdb_file] {
 	    set arg $last_gdb_file;
