@@ -46,17 +46,6 @@ if {$result != "" } then {
 # Part ONE: Check the down load commands
 #
 
-gdb_test "show download-write-size" \
-	"The write size used when downloading a program is 512." \
-	"download limit default"
-
-gdb_test "set download-write-size" "Argument required.*"
-
-gdb_test "set download-write-size 0" ""
-gdb_test "show download-write-size" \
-	"The write size used when downloading a program is unlimited." \
-	"set download limit - unlimited"
-
 gdb_test "show remote memory-write-packet-size" \
 	"The memory-write-packet-size is 0. Packets are limited to \[0-9\]+ bytes." \
 	"write-packet default"
@@ -79,21 +68,14 @@ gdb_test "show remote memory-write-packet-size" \
 # Part TWO: Check the download behavour
 #
 
-proc gdb_load_timed {executable downloadsize class writesize} {
+proc gdb_load_timed {executable class writesize} {
     global test gdb_prompt
-    set test "timed download `[file tail $executable]' - $downloadsize, $class, $writesize"
+    set test "timed download `[file tail $executable]' - $class, $writesize"
 
     if {$writesize != ""} then {
 	gdb_test "set remote memory-write-packet-size $writesize" \
 		"" "$test - set packet size"
-    }
 
-    if {$downloadsize != ""} then {
-	gdb_test "set download-write-size $downloadsize" \
-		"" "$test - set download size"
-    }
-
-    if {$downloadsize != ""} then {
 	send_gdb "set remote memory-write-packet-size $class\n"
 	gdb_expect 5 {
 	    -re ".*Change the packet size.*$" {
@@ -127,18 +109,18 @@ proc gdb_load_timed {executable downloadsize class writesize} {
     pass $test
 }
 
-gdb_load_timed $binfile {} "" {}
+gdb_load_timed $binfile "" {}
 
 # Typically about 400-1 bytes can be downloaded
-gdb_load_timed $binfile 0 "limit" 398
-gdb_load_timed $binfile 0 "limit" 400
+gdb_load_timed $binfile "limit" 398
+gdb_load_timed $binfile "limit" 400
 
 # Absolute max is 16384
-gdb_load_timed $binfile 0 "fixed" 0
-gdb_load_timed $binfile 0 "fixed" 16385
+gdb_load_timed $binfile "fixed" 0
+gdb_load_timed $binfile "fixed" 16385
 
 # fall back to the default
-gdb_load_timed $binfile 0 "limit" 0
+gdb_load_timed $binfile "limit" 0
 
 # Get size of data uploaded
 
