@@ -1,3 +1,8 @@
+2006-08-08  Vladimir Prus  <vladimir@codesourcery.com>
+
+	* gdb.texinfo (Target Commands): Remove 
+	'set download-write-size' and 'show download-write-size'.
+
 2006-08-01  Daniel Jacobowitz  <dan@codesourcery.com>
 
 	* stabs.texinfo (Member Type Descriptor): Correct example for
